<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ContactInfoActivity" >

    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupName" 
        android:textSize="25sp"
        android:gravity="center"
    	/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference" 
    	/>
    <Spinner 
        android:id="@+id/preference_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/call_preference"
        
        />
    
    <Spinner
        android:id="@+id/call_preference_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
     
     <Button
        android:id="@+id/add_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contacts"
        android:onClick="getContact"
        />
      
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
    	/>
   
    <ListView
	    android:id="@+id/contactlist"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
    
    
   
    	
</LinearLayout>
