<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LocationPreferences" >

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/currentLocation"
	    android:textSize="20sp"
	    />
	
	<TextView
	    android:id="@+id/currentlySetLocation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preference" 
        android:textSize="20sp"
    	/>
    <Spinner 
        android:id="@+id/location_preference_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/call_preference"
        
        />
    
    <Spinner
        android:id="@+id/location_call_preference_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
	    android:id="@+id/setLocation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/setLocation"
	    android:textSize="20sp"
	     />
    
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        />
    
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/possibleLocations"
        />
</LinearLayout>
