<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DrivingActivity" >

    <TextView
        android:id="@+id/maindrivingtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drivingtxt" />
    
    <Spinner
        android:id="@+id/drivingSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/drivingIntPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_preference"
        />
    
    <Spinner
        android:id="@+id/driving_call_preference_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/defaultdrivingtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultdrivingtxt"
        />
    
    <Spinner
        android:id="@+id/defaultDrivingSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/drivingDisclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drivingDisclaimer"
        />
    <ToggleButton
        android:id="@+id/toggleDriving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Off"
        android:textOn="On"
        android:layout_gravity="center"
        android:onClick="onToggleClicked"    /> <!-- I can use this to save the preference and also call to start stop the scan -->
      
     

</LinearLayout>
