<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ScheduleActivity" >
	 
	 
	 <TextView
        android:id="@+id/scheduleEventProbTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultEventProbability"/>
    
    <Spinner
        android:id="@+id/scheduleEventDefaultProb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/scheduleEventDefaultMOI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
   		android:text="@string/defaultMOI"
     	/>
    
    <Spinner
        android:id="@+id/spinnerScheduleEventDefaultMOI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    
    <TextView
        android:id="@+id/scheduleProbTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nonEventDefaultProbability"/>
    
    <Spinner
        android:id="@+id/scheduleDefaultProb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
