<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".TimeOfDayActivity" >

    <TextView
        android:id="@+id/createNewTODProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewTODprofile"/>
    
    <EditText
        android:id="@+id/newTODProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        />
    
    <TextView
        android:id="@+id/timeOfDayProbTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultProbability" />
    
     <Spinner
        android:id="@+id/timeOfDayDefaultProb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
     
     <TextView
         android:id="@+id/timeOfDayProfiles"
         android:layout_width="match_parent"
     	 android:layout_height="wrap_content"
     	 android:text="@string/timeOfDayProfiles" />
     
     <ListView
         android:id="@+id/todList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

</LinearLayout>
