<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WeightsActivity" >

   		<TextView 
   		    android:id="@+id/weight_preferences"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:text="@string/weight_preferences"
   		    />
   		
   		<TextView 
   		    android:id="@+id/most_important_context"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:text="@string/most_important"
   		    android:textSize="20sp"
   		    android:textColor="#ffffff"
   		    android:layout_below="@id/weight_preferences"
   		    android:background="#0949e9"
   		    android:layout_marginTop="10sp"
   		    android:layout_centerHorizontal="true"
   		    />
   		
 		<ListView
        android:id="@+id/Weight_ListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/most_important_context"
        />
 		
 		<TextView 
   		    android:id="@+id/least_important_context"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:text="@string/least_important"
   		    android:textSize="20sp"
   		    android:textColor="#ffffff"
   		    android:layout_below="@id/Weight_ListView"
   		    android:background="#0949e9"
   		    android:layout_centerHorizontal="true"
   		    />

</RelativeLayout>
